--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,8 @@
 <h1><%= @user.username  %></h1>
-<button><%= button_to "follow", users_follow_path({id: @user.id}) %></button>
+<% if current_user  %>
+  <%= form_for(current_user.active_relationships.build) do |f| %>
+    <div><%= hidden_field_tag :followed_id, @user.id %></div>
+    <%= f.submit "Follow", class: "btn btn-primary" %>
+  <% end %>
+<% end %>
+
