--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -49,7 +49,7 @@
           <a class="brand" href="#">Sloganmania</a>
           <div class="container nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Users", users_index_path %></li>
+              <li><%= link_to "Users", sloganers_path %></li>
               <% if user_signed_in? %>
                 <li><%= link_to "Publish new slogan", new_message_path %></li>
                 <li><%= link_to(t('Logout'), destroy_user_session_path, :method => :delete) %> </li>    
