--- a/app/views/sloganers/show.html.erb
+++ b/app/views/sloganers/show.html.erb
@@ -1,10 +1,14 @@
 
 <h1><%= @sloganer.username  %></h1>
-<button><%= button_to "follow", users_follow_path({id: @sloganer.id}) %></button>
-<% if current_user  %>
-  <%= form_for(current_user.active_relationships.build) do |f| %>
-    <div><%= hidden_field_tag :followed_id, @sloganer.id %></div>
-    <%= f.submit "Follow", class: "btn btn-primary" %>
-  <% end %>
-<% end %>
+<div class="well">
+    <span class="badge"><%= @sloganer.messages.size  %></span>
+    
+    <% if current_user  %>
+      <%= form_for(current_user.active_relationships.build) do |f| %>
+        <%= hidden_field_tag :followed_id, @sloganer.id %>
+        <%= f.submit "Follow", class: "btn btn-primary" %>
+      <% end %>
+    <% end %>
+  </div>
+
 
