--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -51,7 +51,7 @@
             <ul class="nav">
               <li><%= link_to "Users", sloganers_path %></li>
               <% if user_signed_in? %>
-                <li><%= link_to "Publish new slogan", new_message_path %></li>
+                <li><%= link_to "Publish new slogan", new_message_path(current_user) %></li>
                 <li><%= link_to(t('Logout'), destroy_user_session_path, :method => :delete) %> </li>    
                 <li><%= current_user.email %></li>
                 <li><%= link_to(t('Logout'), destroy_user_session_path, :method => :delete) %></li>   
