finished the get messages by user api method

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
   <% @timeline_messages.each do |message| %>
     <div class="well">
       <%= message.content  %> by:
-      <%= link_to message.user.username, sloganer_path(message.user) %>
+      <%= link_to message.user.username, sloganer_path(message.user.username) %>
     </div>
   <% end %>
 <% end %>
