--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -5,9 +5,9 @@
 <table class="table table-striped">
   <thead>
     <tr>
-      <th><%= model_class.human_attribute_name(:id) %></th>
-      <th> Message</th>
-      <th><%= model_class.human_attribute_name(:user_id) %></th>
+      
+      <th> Slogan</th>
+      <th> Sloganer</th>
       <th><%= model_class.human_attribute_name(:created_at) %></th>
       <th><%=t '.actions', :default => t("helpers.actions") %></th>
     </tr>
@@ -15,24 +15,25 @@
   <tbody>
     <% @messages.each do |message| %>
       <tr>
-        <td><%= link_to message.id, message_path(message) %></td>
+        
         <td><%= message.content %></td>
-        <td><%= message.user_id %></td>
+        <td><%= link_to message.user.username , sloganer_path(message.user.username)  %></td>
         <td><%=l message.created_at %></td>
         <td>
+        <% if current_user ==  message.user%>
+          
+        
           <%= link_to t('.edit', :default => t("helpers.links.edit")),
-                      edit_message_path(message), :class => 'btn btn-mini' %>
+                      edit_message_path(message.user.username, message), :class => 'btn btn-mini' %>
           <%= link_to t('.destroy', :default => t("helpers.links.destroy")),
-                      message_path(message),
+                      message_path(message.user.username, message),
                       :method => :delete,
                       :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) },
                       :class => 'btn btn-mini btn-danger' %>
+        <% end %>
         </td>
       </tr>
     <% end %>
   </tbody>
 </table>
 
-<%= link_to t('.new', :default => t("helpers.links.new")),
-            new_message_path,
-            :class => 'btn btn-primary' %>
