--- a/app/views/sloganers/index.html.erb
+++ b/app/views/sloganers/index.html.erb
@@ -3,7 +3,7 @@
   <% @sloganers.each do |sloganer| %>
   <div class="well">
     <span class="badge"><%= sloganer.messages.size  %></span>
-    <%= link_to sloganer.username, sloganer_path(sloganer) %>
+    <%= link_to sloganer.username, sloganer_path(sloganer.username) %>
     
     <% if current_user && current_user != sloganer && !(current_user.following? (sloganer))%>
       <%= form_for(current_user.active_relationships.build) do |f| %>
