--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,46 +38,54 @@
   </head>
   <body>
 
-    <div class="navbar navbar-fixed-top">
+
+
+
+
+
+    <div class="navbar navbar-fluid-top">
       <div class="navbar-inner">
-        <div class="container">
+        <div class="container-fluid">
           <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">Sloganmania</a>
-          <div class="container nav-collapse">
+          <h2><%= link_to "Sloganmania", root_path  %></h2>
+          <div class="container-fluid nav-collapse">
             <ul class="nav">
-              <li><%= link_to "Users", sloganers_path %></li>
               <% if user_signed_in? %>
+                <li><%= link_to "My info", sloganer_path(current_user.username) %></li>
                 <li><%= link_to "Publish new slogan", new_message_path(current_user) %></li>
-                <li><%= link_to(t('Logout'), destroy_user_session_path, :method => :delete) %> </li>    
-                <li><%= current_user.email %></li>
-                <li><%= link_to(t('Logout'), destroy_user_session_path, :method => :delete) %></li>   
-              <% else %>
-                <li><%= link_to "New user", new_user_registration_path  %></li>
-                <li><%= link_to "Login", new_user_session_path  %></li>
               <% end %>
+              <li><%= link_to "Users", sloganers_path %></li>
             </ul>
+
+            <ul class="nav pull-right">
+              <% if user_signed_in? %>
+                <li><%= link_to current_user.email, edit_user_registration_path %></li> 
+                <li><%= link_to(t('Logout'), destroy_user_session_path, :method => :delete) %> </li>  
+              <% else %>
+                <li><%= link_to "New user", new_user_registration_path %></li><li><%= link_to "Login", new_user_session_path %></li>
+            <% end %>        
+          </ul>
           </div><!--/.nav-collapse -->
         </div>
       </div>
     </div>
-
-    <div class="container">
-        <div class="row">
-        <br><br>
-          <div class="span12">
-           <p id="notice"><%= notice %></p>
-            <%= bootstrap_flash %>
-            <%= yield %>
-          </div>
-
-        </div><!--/row-->
+           
+    <div class="container-fluid">
+      <div class="row-fluid">
+        
+        <div class="span10 offset1">
+          <p id="notice"><%= notice %></p>
+          <%= bootstrap_flash %>
+          <%= yield %>
+        </div>
+      </div><!--/row-->
 
       <footer>
-        <p>&copy; Company 2015</p>
+        <p>&copy; Pepetox 2014</p>
       </footer>
 
     </div> <!-- /container -->
