--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -13,7 +13,7 @@
   <div class="control-group">
     <%= f.label "Message", :class => 'control-label' %>
     <div class="controls">
-      <%= f.text_field :content, :class => 'text_field' %>
+      <%= f.text_field :content, :class => 'text_field span12' %>
     </div>
   </div>
 
